pushing to elasticsearch

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "scrape.js",
   "author": "TW",
   "dependencies": {
-    "request": "latest",
-    "cheerio": "latest"
+    "cheerio": "latest",
+    "elasticsearch": "^13.1.1",
+    "request": "latest"
   }
 }
